@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mp3kult/Attic/mp3kult-0.7-r1.ebuild,v 1.10 2005/07/11 20:22:07 fvdpol Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mp3kult/Attic/mp3kult-0.7-r1.ebuild,v 1.11 2005/09/04 10:38:22 flameeyes Exp $
 
 IUSE=""
 
@@ -29,5 +29,5 @@ src_compile() {
 
 src_install () {
 	einstall || die
-	dodoc ABOUT-NLS AUTHORS COPYING INSTALL MANUAL NEWS README
+	dodoc AUTHORS MANUAL NEWS README
 }
