@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/mp3kult
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mp3kult/Attic/ChangeLog,v 1.11 2005/07/11 20:22:07 fvdpol Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mp3kult/Attic/ChangeLog,v 1.12 2005/09/04 10:38:22 flameeyes Exp $
+
+  04 Sep 2005; Diego Pettenò <flameeyes@gentoo.org> mp3kult-0.7-r1.ebuild,
+  mp3kult-0.7-r2.ebuild:
+  Don't install COPYING, INSTALL and ABOUT-NLS files. Use double brakets for
+  tests.
 
 *mp3kult-0.7-r2 (11 Jul 2005)
 
